<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:layout_margin="10dp"
    android:background="@drawable/shadow_box"
    android:orientation="horizontal"
    android:padding="10dp"
    android:weightSum="4">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:visibility="visible"
        android:weightSum="4">

        <TextView
            android:id="@+id/Student_name_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:padding="5dp"
            android:text="@string/student_name"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/gr_no_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/grno"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/percentage_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.78"
            android:padding="5dp"
            android:text="@string/percentage"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/view_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.87"
            android:padding="5dp"
            android:text="@string/view"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15dp" />


    </LinearLayout>
</LinearLayout>

