<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:visibility="visible"
        android:weightSum="4"
        android:padding="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/list_line">

        <TextView
            android:id="@+id/chapter_no_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chapterno"
            android:padding="2dp"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="14dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/chapter_name_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.24"
            android:text="@string/lessonchaptername"
            android:padding="3dp"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="14dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/pdf_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lessonpdf"
            android:padding="3dp"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="14dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/word_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lessonword"
            android:padding="3dp"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="14dp"
            android:textAlignment="center"/>

    </LinearLayout>
</LinearLayout>