<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:visibility="visible"
        android:weightSum="5">

        <TextView
            android:id="@+id/srno_txt"
            android:layout_width="42dp"
            android:layout_height="31dp"
            android:padding="5dp"
            android:text="@string/srno"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/test_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:padding="5dp"
            android:text="@string/testname"
            android:textAlignment="center"
            android:layout_gravity="center|center_horizontal"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:layout_weight="1.68" />

        <TextView
            android:id="@+id/grade_txt"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/grade"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/subject_txt"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_weight="1.64"
            android:padding="5dp"
            android:text="@string/subject"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <ImageView
            android:id="@+id/edit_txt"
            android:layout_width="0dp"
            android:layout_height="31dp"
            android:layout_weight=".8"
            android:padding="5dp"
            android:src="@drawable/edit_pen"
            android:layout_gravity="left"/>

    </LinearLayout>
</LinearLayout>