<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@drawable/shadow_box"
            android:weightSum="5">

            <TextView
                android:id="@+id/Date_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:text="@string/homeworkDate"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/Standard_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_weight="1"
                android:text="@string/homeworkStandard"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/Class_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/homeworkClass"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/Subject_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:text="@string/homeworkSubject"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14dp"
                android:textStyle="normal" />

            <ImageView
                android:id="@+id/arrow_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.51"
                android:textSize="14dp"
                android:textStyle="normal" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>