<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="1dp"
        android:visibility="visible"
        android:weightSum="3"
        android:padding="4dp"
        android:layout_margin="5dp"
        android:background="@drawable/list_line">

        <TextView
            android:id="@+id/lecuture_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lecture"
            android:padding="5dp"
            android:textAlignment="center"
            android:paddingLeft="8dp"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/subject_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:text="@string/subject"
            android:padding="5dp"
            android:paddingLeft="8dp"
            android:textAlignment="center"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/class_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/classes"
            android:padding="5dp"
            android:paddingLeft="8dp"
            android:textAlignment="center"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="14dp" />


    </LinearLayout>
</LinearLayout>