<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:padding="4dp"
        android:paddingBottom="1dp"
        android:visibility="visible"
        android:weightSum="4">

        <TextView
            android:id="@+id/Student_name_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.4"
            android:padding="5dp"
            android:text="Student Name"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/gr_no_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/grno"
            android:textAlignment="center"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/percentage_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:padding="5dp"
            android:text="@string/percentage"
            android:textAlignment="center"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/marks_txt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/Marks"
            android:textAlignment="center"
            android:textColor="@color/scheduleheadertextcolor"
            android:textSize="16dp" />


    </LinearLayout>
</LinearLayout>